# nettest

./: .dockerignore  Cargo.toml  Cross.toml  DEPLOY.md  Dockerfile.build  Dockerfile.build.debian  README.md  asset-manifest.json  build-local.sh  build.sh  index.html  measurementservers.crt  measurementservers.key  nettest.conf  rmbt_server.logrotate  secret.key  serve_map.sh  servers_map.html  test-results.html
.github/workflows/: build-cross.yml  build-debian-10.yml  build-debian-11.yml  build-debian-12.yml  build-debian.yml  build-docker.yml  build-linux.yml  build-macos.yml  build-musl-cross.yml  build-ubuntu-22.yml  build-ubuntu-24.yml  deploy-pages.yml  deploy-server.yml  deploy.yml  manual-release.yml  publish-packages.yml  publish-results.yml  test-main.yml  test-pr.yml  test-ssh.yml
client/: Cargo.toml  measurement-client  ntst-client
client-mio/: Cargo.toml
client-mio/src/: main.rs
client-mio/src/config/: settings.rs
client-mio/src/handlers/: get_time.rs  greeting.rs  mod.rs  put_no_result.rs
client-mio/src/logger/: mod.rs
client-mio/src/stream/: mod.rs
client-mio/src/utils/: random_buffer.rs
client-tokio/: Cargo.toml
client-tokio/src/: main.rs
client-tokio/src/handlers/: get_time.rs  greeting.rs  mod.rs  put_no_result.rs
client/src/: connector.rs  graph_service.rs  lib.rs  main.rs  openssl.rs  openssl_sys.rs  rustls.rs  state.rs  stream.rs  websocket.rs  websocket_tls_openssl.rs
client/src/handlers/: basic_handler.rs  download.rs  get.rs  get_chunks.rs  get_no_result.rs  get_time.rs  greeting.rs  handler_factory.rs  mod.rs  perf.rs  ping.rs  put.rs  put_no_result.rs  test_token.rs
client/src/stream/: mod.rs
client/src/utils/: constants.rs  mod.rs  utils.rs
performance/: PERFORMANCE_REPORT.MD  collect_metrics.sh  plot_results.py  run_tests.sh  system_metrics_C.csv  system_metrics_RUST.csv  visualize_results.py
src/: main.rs
src/client/: args_parser.rs  calculator.rs  client.rs  constants.rs  globals.rs  mod.rs  openssl.rs  openssl_sys.rs  runnner.rs  rustls.rs  state.rs  stream.rs
src/config/: constants.rs  mod.rs  parser.rs
src/handlers/: get_chunks.rs  get_time.rs  mod.rs  ping.rs  put.rs  put_no_result.rs
src/logger/: mod.rs
src/mioserver/: mod.rs  parser.rs  server.rs  server_test_phase.rs  worker.rs
src/protocol/: commands.rs  messages.rs  mod.rs  token.rs
src/server/: connection_handler.rs  mod.rs  server.rs  server_config.rs
src/stream/: mod.rs  rustls.rs  rustls_server.rs  stream.rs  websocket.rs  websocket_rustls_server.rs  websocket_tls_openssl.rs
src/tokio_server/: connection_handler.rs  mod.rs  server.rs  server_config.rs
src/utils/: chunk_validator.rs  daemon.rs  mod.rs  random_buffer.rs  secret_keys.rs  token_validator.rs  use_http.rs  websocket.rs
static/: README.md  cors-proxy.html  map-embed.html  measurement.html  package-lock.json  package.json  server.js  servers_map.html  test-results.html
static/api/: test-results
static/css/: main.c89ee6d8.css  main.c89ee6d8.css.map  main.e7085f0c.css  main.e7085f0c.css.map
static/js/: 259.d406f2a6.chunk.js  259.d406f2a6.chunk.js.LICENSE.txt  259.d406f2a6.chunk.js.map  main.af283863.js  main.af283863.js.map  main.c1c562ec.js  main.c1c562ec.js.map
static/public/: index.html
static/src/: App.css  App.js  index.css
tests/: basic_server.rs  lib.rs  mod.rs
tests/basic_server/: basic_server.rs  basic_server_ws.rs  mod.rs
tests/handler/: handle_get_chunks.rs  handle_get_time.rs  handle_ping.rs  handle_put.rs  handle_put_no_result.rs  mod.rs
tests/test_utils/: mod.rs
tests/utils/: mod.rs
(+78 files in other folders)
