[package]
name = "rmbt_server"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
sha1 = "0.10.6"
base64 = "0.21.7"
hmac = "0.12.1"
regex = "1.10.3"
libc = "0.2"
nix = "0.26"
fastrand = "2.0.1"
uuid = { version = "1.7.0", features = ["v4"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tungstenite = "0.21.0"
lazy_static = "1.4.0"
once_cell = "1.18"
chrono = "0.4.34"

[dev-dependencies]
tempfile = "3.8"
