[package]
name = "rmbt_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
native-tls = "0.2"
sha1 = "0.10.6"
base64 = "0.21.7"
hmac = "0.12.1"
regex = "1.10.3"
libc = "0.2.153"
nix = "0.26"
fastrand = "2.0.1"
uuid = { version = "1.7.0", features = ["v4"] }
futures = "0.3"
futures-util = "0.3.30"
tokio-tungstenite = { version = "0.21.0", features = ["rustls"] }
tungstenite = { version = "0.21.0", features = ["rustls"] }
lazy_static = "1.4.0"
chrono = "0.4.34"
bytes = "1.10.1"
tokio-rustls = { version = "0.25.0" }
rustls = { version = "0.22.0" }
rustls-pemfile = "2.0.0"
[dev-dependencies]
tokio-native-tls = "0.3"

