[package]
name = "measurement-client"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Measurement client application"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rustls = { version = "0.23.27" }
mio = { version = "1", features = ["net"] }
bytes = "1.10.1"
ringbuf = "0.4.8"
fastrand = "2.0"
rustls-pemfile = "2.0.0"
openssl-sys = { version = "0.9"}
openssl = {version = "0.10"}
lazy_static = "1.4"
prettytable-rs = "0.10.0"
tungstenite = { version = "0.27.0" }
sha1 = "0.10"
base64 = "0.21"

